--- a/01-sets.Rmd
+++ b/01-sets.Rmd
@@ -2,7 +2,131 @@
 
 ## Sets
 
+### Introduction
+
+**Idea of definition**: A set is a collection of objects.
+
+**Terminology** An object in a set is called an **element** or a member of the set. To describe sets, we can use *listing* or *description*.
+
+**Listing** List all the elements in a set, e.g., $\{1,2,3\}$ is the set containing three elements.
+
+**Description** Describe a common property of the elements of the set, using the
+following notation:
+$$\{x:P(x)\}~~~\text{or}~~~ \{x|p(x)\}$$ 
+read "the set of all $x$ such that $P(x)$ (is true)". 
+For example $\{x:x ~~\text{is a positive integer less than 101}\}=\{1,\ldots,100\}=\{x\in\mathbb{R}:x\le100\}$. 
+
+**Notations**
+
+1. The set of all real numbers is denoted by $\mathbb{R}$.
+
+2. The set of all rational numbers is denoted by $\mathbb{Q}$.
+
+3. The set of all integers  is denoted by $\mathbb{Z}$.
+
+4. The set of all positive integers is denoted by $\mathbb{Z}_+$.
+
+5. The set of all all natural numbers is denoted by $\mathbb{N}$.
+
+**Example** $2\in\mathbb{N}, 2\in\mathbb{Q},\pi\in\mathbb{R},\pi\notin\mathbb{Q}$.
+
+**Example** Let $A=\{1,2,\ldots,100\}$ and $B=\{2,3,4,5\}$. Then every element of set $B$ is also an element of set $A$. The equity means assigning a name to a set, i.e., the set $\{1,2,\ldots,100\}$ is denoted by $A$. Sometimes, we use the symbol $:=$. 
+
+**Notation** Given an object $x$ and a set $A$, either $x$ is an element of $A$ denoted by $x\in A$ or $x$ is not an element of $A$ denoted by $x\notin A$.
+
+**Definition** The set that has no element is called **the empty set** denoted by $\emptyset$.
+
+**Definition** Let $A$ and $B$ be sets. If every element of $A$ is also an element of $B$ and vice versa, then we say that $A$ and $B$ are equal, denotedby $A=B$. Otherwise, we say that $A$ and $B$ are unequal, denoted by $A\neq B$.
+
+**Example** Let $A=\{1,3,5,7,9\}$ and let $B=\{x\in\mathbb{Z}_+: x ~~\text{is a prime number less than 10}\}$. Then we have $A\neq B$.
+
+**Example** Let $A=\{1,2,3\}$ and let $B=\{1,3,2\}$. Then we have $A=B$.
+
+**Definition** Let $A$ and $B$ be sets. If every element of $A$ is also an element of $B$, then we say that $A$ is a subset of $B$, denoted by $A\subseteq B$. Otherwise, we say that $A$ is not a subset of $B$, denoted by $A\nsubseteq B$.
+
+**Note**
+
+1. $A\subseteq A$
+
+2. $A=B$ if and only if $A\subseteq B$ and $B\subseteq A$.
+
+3. $A\nsubseteq B$ means that there is at least one element of $A$ that is not an element of $B$.
+
+**Example** Let $A=\{1,2,3,4,5\}$, $B=\{1,3,5\}$, $C=\{2,4,6\}$. 
+Then we have $B\subseteq A$ and $C\nsubseteq A$.
+
+```{r,echo=FALSE,out.width="40%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/1/vn.png")
+```
+
+### Set operations
+
+**Definition** Let $A$ and $B$ be sets.
+
+1. The **intersection** of $A$ and $B$, denoted by $A\cap B$, is the set whose elements are those belonging to both $A$ and $B$, that is 
+$$A\cap B=\{x:x\in A ~~\text{and}~~x\in B\}.$$
+
+2. The **union** of $A$ and $B$, denoted by $A\cup B$, is the set whose elements are those belonging to either $A$ or $B$ or both $A$ and $B$, that is
+$$A\cup B=\{x: x\in A ~~\text{or}~~x\in B\}.$$
+
+**Example** Let $A=\{2,3,5\}$, $B=\{2,5,6,8\}$ and $C=\{1,2,3\}$. Find the following sets: $A\cap B$, $A\cup B$, $(A\cap B)\cap C$, $A\cap (B\cap C)$.
+
+**Associative** Set intersection and set union are associative.
+$$(A\cap B)\cap C=A\cap(B\cap C)$$
+$$(A\cup B)\cup C=A\cup(B\cup C)$$
+
+**Definition** Let $A$ and $B$ be sets. The relative complement of $B$ in $A$, denoted by $A\backslash B$ or $A-B$, is the set whose elements are those belonging to $A$ but not belonging to $B$, that is,
+$$A\backslash B=\{x\in A:x\notin B\}.$$
+
+**Example** Let $A=\{a,b,c\}$ and $B=\{c,d,e\}$. Then we have $A\backslash B=\{a,b\}.$
+
+**Universal set** A large enough set containing all objects under consideration, denoted by $U$.
+
+**Example** In considering whole numbers, we may use $\mathbb{Z}$ as a universal set. The set of all prime numbers can be written as $\{x\in\mathbb{Z}:x>0 ~\text{and}~x~ \text{has exactly two divisors} \}$.
+
+**Definition** Let $U$ be a universal set and let $B$ be a subset of $U$. Then the set $U\backslash B$ is called the complement of $B$ (in $U$) and is denoted by $B'$ (or $B^c$).
+
+
+**Venn Diagrams** A Venn diagram is a device to represent sets graphically.
+
+**Formulas for set operations**
+
+$$(A\cup B)\cap C=(A\cap B)\cup(B\cap C)$$
+
+```{r,echo=FALSE,out.width="70%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/1/vn2.png")
+```
+
+
 ## Real Numbers
+
+### The Number Systems
+
+**Natural numbers**
+
+**Integers**
+
+**Rational numbers**
+
+**Real numbers**
+
+**Real number line**
+
+**Notations**
+
+**Terminology**
+
+**Example**
+
+### Radicals
+
+**Definition**
+
+
+
+
 
 ## Solving Inequalities
 
