--- a/02-functions-2.Rmd
+++ b/02-functions-2.Rmd
@@ -83,29 +83,138 @@ knitr::include_graphics("./plots/2/parabola.png")
 
 Let $f:A\rightarrow \mathbb{R}$ be a function where $A\subseteq \mathbb{R}$. The graph of $f$ is the following subset of $\mathbb{R}^2$:
 $$\{(x,y)\in\mathbb{R}^2:x\in A~~\text{and}~~y=f(x)\}.$$
-**Examples**
 
-1. Constant functions $f(x)=c$
+1. Constant functions $f(x)=c$. The domain is $\mathbb{R}$. The range is a singleton $\{c\}$.
+```{r,echo=FALSE,out.width="30%",fig.align = 'center',fig.cap="constant function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/constant.png")
+```
 
-2. Linear functions $f(x)=ax+b$
 
-3. Quadratic functions $f(x)=ax^2+bx+c$
+2. Linear functions $f(x)=ax+b$. The domain is $\mathbb{R}$. The range is $\mathbb{R}$.
+```{r,echo=FALSE,out.width="30%",fig.align = 'center',fig.cap="linear function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/line.png")
+```
 
-4. Polynomial functions
+3. Quadratic functions $f(x)=ax^2+bx+c$. The domain is $\mathbb{R}$. The range is $[k,\infty)$ if $a>0$ and $(-\infty,k]$ if $a<0$, where $k$ is the $y$-coordinate of the vertex.
+```{r,echo=FALSE,out.width="60%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/quadratic.png")
+```
 
-5. Rational functions
 
-6.Square-root function
+4. Polynomial functions with degree $n$ $f(x)=a_nx^n+a_{n-1}x^{n-1}+\cdots+a_1x+a_0$.
+The domain is $\mathbb{R}$. There are three possibilities for the range.
 
-7. Exponential functions
+    1. If the degree $n$ is odd, then $\text{ran}(f)=\mathbb{R}$.
 
-8. Logarithmic functions
+    2. If the degree $n$ is even and positive, then
 
-9. Trigonometric functions
+      - If $a_n>0$ $\text{ran}(f)=[k,\infty)$;
+  
+      - If $a_n<0$ $\text{ran}(f)=(\infty,k]$.
+    
+**Example** $f(x)=x^3-3x^2+x-1.$
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/polynomial.png")
+```
+  
+5. Rational functions are in the form of 
+$$f(x)=\frac{p(x)}{q(x)},$$
+where $p$ and $q$ are polynomial functions.
 
-10. Absolute value function
+**Example** $f(x)=\frac{1}{x}$. 
+The domain of $f$ is $\mathbb{R}\backslash \{0\}$. 
+The range of $f$ is also $\mathbb{R}\backslash \{0\}$. 
+The graph of it is symmetric about the origin because $f(-x)=-f(x)$.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/rational1.png")
+```
 
-11. Piecewise-defined functions
+6. Principle-square-root function. Denoted by sqrt or $\sqrt$. Given by $\text{sqrt}(x)=\sqrt{x}$. The domain is $[0,\infty)$. The range is $[0,\infty)$.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/sqrt1.png")
+```
+
+**Example** For each of the following equations, sketch its graph.
+
+    1. $y=\sqrt{x}-2$
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/sqrt2.png")
+```
+  
+    2. $y=\sqrt{x-2}$
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/sqrt3.png")
+```
+    
+    3. $y=\sqrt{2-x}$
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/sqrt4.png")
+```
+
+**Remark** Let $a$ be a positive constant.
+
+- The graph of $y=f(x)+a$ can be obtained from that of $y=f(x)$ by moving it $a$ units up.
+
+- The graph of $y=f(x)-a$ can be obtained from that of $y=f(x)$ by moving it $a$ units down
+
+- The graph of $y=f(x+a)$ can be obtained from that of $y=f(x)$ by moving it $a$ units to the left.
+
+- The graph of $y=f(x-a)$ can be obtained from that of $y=f(x)$ by moving it $a$ units to the right.
+
+- The graph of $y=\sqrt{2-x}$ and that of $y=\sqrt{x-2}$ are symmetric w.r.t.  the vertical line $x=2$.
+
+7. Exponential functions with base $b$ is given by $$\exp_b(x)=b^x$$. The domain is $\mathbb{R}$. The range is $(0,\infty)$. The $y$-intercept of the graph of every exponential function is $(0,1)$.
+
+**Example** The graph of $\exp_2$ goes up and the rate that the graph goes up increases as $x$ increases.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/exp2.png")
+```
+
+**Example** The graph of $\exp_{\frac{1}{3}}$ goes down as $x$ increases.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/exp13.png")
+```
+
+8. Logarithmic functions. The function, denoted by $\log$, is called the common logarithmic function. 
+For each positive real number $x$, $\log(x)$ is defined to be the unique real number such that $10^{\log (x)}=x$.
+That is, $\log(x)=y$ if and only if $y=10^x$.
+The domain of log is $(0,\infty)$. The range is $\mathbb{R}$.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/log.png")
+```
+
+<!-- 9. Trigonometric functions -->
+
+9. Absolute value function, denoted by $|\cdot|$, is the function from $\mathbb{R}$ to $\mathbb{R}$, given by 
+\begin{equation}
+|x|=
+\begin{cases}
+x~~&\text{if}~~ x>0,\\
+0~~&\text{if}~~ x=0,\\
+-x~~&\text{if}~~x<0.
+\end{cases}
+\end{equation}
+
+In defining $|x|$, the domain $\mathbb{R}$ is divided into three disjoint subsets, namely $(0,\infty)$, $\{0\}$ and $(-\infty,0)$.
+Functions defined in this way are called **piecewise-defined functions**.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/abs.png")
+```
+
+10. Piecewise-defined functions
 
 
 ## Compositions of Functions
