--- a/02-functions-2.Rmd
+++ b/02-functions-2.Rmd
@@ -85,20 +85,20 @@ Let $f:A\rightarrow \mathbb{R}$ be a function where $A\subseteq \mathbb{R}$. The
 $$\{(x,y)\in\mathbb{R}^2:x\in A~~\text{and}~~y=f(x)\}.$$
 
 1. Constant functions $f(x)=c$. The domain is $\mathbb{R}$. The range is a singleton $\{c\}$.
-```{r,echo=FALSE,out.width="30%",fig.align = 'center',fig.cap="constant function"}
+```{r,echo=FALSE,out.width="30%",fig.align = 'center',fig.cap="Constant function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/constant.png")
 ```
 
 
 2. Linear functions $f(x)=ax+b$. The domain is $\mathbb{R}$. The range is $\mathbb{R}$.
-```{r,echo=FALSE,out.width="30%",fig.align = 'center',fig.cap="linear function"}
+```{r,echo=FALSE,out.width="30%",fig.align = 'center',fig.cap="Linear function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/line.png")
 ```
 
 3. Quadratic functions $f(x)=ax^2+bx+c$. The domain is $\mathbb{R}$. The range is $[k,\infty)$ if $a>0$ and $(-\infty,k]$ if $a<0$, where $k$ is the $y$-coordinate of the vertex.
-```{r,echo=FALSE,out.width="60%",fig.align = 'center',fig.cap="quadratic function"}
+```{r,echo=FALSE,out.width="60%",fig.align = 'center',fig.cap="Quadratic function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/quadratic.png")
 ```
@@ -116,7 +116,7 @@ The domain is $\mathbb{R}$. There are three possibilities for the range.
       - If $a_n<0$ $\text{ran}(f)=(\infty,k]$.
     
 **Example** $f(x)=x^3-3x^2+x-1.$
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Polynomial function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/polynomial.png")
 ```
@@ -129,33 +129,33 @@ where $p$ and $q$ are polynomial functions.
 The domain of $f$ is $\mathbb{R}\backslash \{0\}$. 
 The range of $f$ is also $\mathbb{R}\backslash \{0\}$. 
 The graph of it is symmetric about the origin because $f(-x)=-f(x)$.
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Rational function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/rational1.png")
 ```
 
-6. Principle-square-root function. Denoted by sqrt or $\sqrt$. Given by $\text{sqrt}(x)=\sqrt{x}$. The domain is $[0,\infty)$. The range is $[0,\infty)$.
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+6. Principle-square-root function. Denoted by sqrt or $\sqrt{~~}$. Given by $\text{sqrt}(x)=\sqrt{x}$. The domain is $[0,\infty)$. The range is $[0,\infty)$.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Square-root function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/sqrt1.png")
 ```
 
 **Example** For each of the following equations, sketch its graph.
 
-    1. $y=\sqrt{x}-2$
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+- $y=\sqrt{x}-2$
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Square-root function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/sqrt2.png")
 ```
   
-    2. $y=\sqrt{x-2}$
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+- $y=\sqrt{x-2}$
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Square-root function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/sqrt3.png")
 ```
     
-    3. $y=\sqrt{2-x}$
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+- $y=\sqrt{2-x}$
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Square-root function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/sqrt4.png")
 ```
@@ -175,13 +175,13 @@ knitr::include_graphics("./plots/2/sqrt4.png")
 7. Exponential functions with base $b$ is given by $$\exp_b(x)=b^x$$. The domain is $\mathbb{R}$. The range is $(0,\infty)$. The $y$-intercept of the graph of every exponential function is $(0,1)$.
 
 **Example** The graph of $\exp_2$ goes up and the rate that the graph goes up increases as $x$ increases.
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Exponential function with base larger than 1"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/exp2.png")
 ```
 
 **Example** The graph of $\exp_{\frac{1}{3}}$ goes down as $x$ increases.
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Exponential function with base smaller than 1"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/exp13.png")
 ```
@@ -190,7 +190,7 @@ knitr::include_graphics("./plots/2/exp13.png")
 For each positive real number $x$, $\log(x)$ is defined to be the unique real number such that $10^{\log (x)}=x$.
 That is, $\log(x)=y$ if and only if $y=10^x$.
 The domain of log is $(0,\infty)$. The range is $\mathbb{R}$.
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Logarithmic function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/log.png")
 ```
@@ -209,19 +209,117 @@ x~~&\text{if}~~ x>0,\\
 
 In defining $|x|$, the domain $\mathbb{R}$ is divided into three disjoint subsets, namely $(0,\infty)$, $\{0\}$ and $(-\infty,0)$.
 Functions defined in this way are called **piecewise-defined functions**.
-```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="quadratic function"}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Absolute value function"}
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 knitr::include_graphics("./plots/2/abs.png")
 ```
 
 10. Piecewise-defined functions
 
+**Example** Let $f:[-2,6]\rightarrow\mathbb{R},x\mapsto f(x)$ be the function given by 
+\begin{equation}
+f(x)=
+\begin{cases}
+x^2~~&\text{if}~~-2\le x<0\\
+2x~~&\text{if}~~0\le x<2\\
+4-x~~&\text{if}~~2\le x\le 6
+\end{cases}
+\end{equation}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Piecewise function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/piece.png")
+```
+
+**Step function** Suppose the long-distance rate for a telephone call from City A to City B is \$1.4 for the first minute and \$0.9 for each additional minute or fraction thereof. If $y=f(t)$ is a function that indicates the total charge $y$ for a call of $t$ minutes' duration, sketch the graph of $f$ for $0<t\le 4\frac{1}{2}$.
+\begin{equation}
+f(t)=
+\begin{cases}
+1.4 ~~&\text{if}~~0<t\le 1,\\
+2.3 ~~&\text{if}~~1<t\le 2,\\
+3.2 ~~&\text{if}~~2<t\le 3,\\
+4.1 ~~&\text{if}~~3<t\le 4,\\
+5.0 ~~&\text{if}~~4<t\le 4\frac{1}{2}.
+\end{cases}
+\end{equation}
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Step function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/step.png")
+```
 
 ## Compositions of Functions
 
+**Definition** Let $f$ and $g$ be functions such that the codomain of $f$ is a subset of the domain of $g$. The composition of $g$ with $f$, denoted by $(g\circ f)(x)=g(f(x)).$ 
+
+**Example** Let $f(x)=x^2$ and $g(x)=2x+1$. Find $(f\circ g)(x)$ and $(g\circ f)(x)$. 
+
+**Remark** The composition of functions is not commutative.
+
+**Remark** If the range of $f$ is not contained in the domain of $g$, then we have to restrict $f$ to a smaller set so that for every $x$ in that set, $f(x)$ belongs to the domain of $g$. The domain of $g\circ f$ is taken to be the following:
+$$\text{dom}(g\circ f)=\{x\in\text{dom}(f):f(x)\in\text{dom}(g)\}.$$
+
+**Example** Let $f(x)=x+1$ and $g(x)=\sqrt{x}$. Find the domain of $g\circ f$.
+
 ## Inverse Functions
 
+**Definition** Let $f$ be a function. We say that $f$ is injective if the following condition is satisfied:
+$$x_1,x_2\in\text{dom}(f)~~\text{and}~~ x_1\neq x_2 \implies f(x_1)\neq f(x_2)$$
+which is also equivalent to 
+$$x_1,x_2\in\text{dom}(f)~~\text{and}~~ f(x_1)=f(x_2) \implies x_1=x_2.$$
+
+**Example** Let $g(x)=x^2$. The domain of $g$ is $\mathbb{R}$. The function $g$ is not injective.
+
+**Horizontal line test** Let $f: X\rightarrow \mathbb{R}$ be a function where $X\subseteq\mathbb{R}$.
+Then $f$ is injective if and only if every horizontal line intersects the graph of $f$ in at most one point.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Horizontal line test"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/injective.png")
+```
+
+**Definition** Let $f: X\rightarrow Y$ be an injective function and let $Y_1$ be the range of $f$. The inverse function of $f$, denoted by $f^{-1}$, is the function from $Y_1$ to $X$ such that for every $y\in Y_1$, $f^{-1}(y)$ is the unique element of $X$ satisfying $f(f^{-1}(y))=y$.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Injective mapping"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/inverse.png")
+```
+
+**Remark** 
+
+1. For every $x\in X$, we have $(f^{-1}\circ f)(x)=x.$ For every $y\in Y$, we have $(f\circ f^{-1})(y)=y$.
+
+2. $f^{-1}$ is injective and $(f^{-1})^{-1}(x)=f(x)$ for all $x\in\text{dom}(f).$
+
+**Steps to find inverse functions**
+
+1. Put $y=f(x)$.
+
+2. Solve $x$ in terms of $y$. The result will be in the form $x=$ an expression in $y$.
+
+3. From the expression in $y$ obtained in step 2, the range of $f$ can be determined. This is the domain of $f^{-1}$. The required formula $f^{-1}(y)=$ the expression in $y$ obtained in Step 2.
+
+**Example** Let $f(x)=2x^3+1$. Find the inverse of $f$.
+
+**Example** Let $g: [0,\infty)\rightarrow \mathbb{R}, x\mapsto g(x)=x^2$. Find the inverse of $g$.
+
+**Graph of the inverse function** The graph of $f$ and the graph of $f^{-1}$ are symmetric about the line $y=x$.
+```{r,echo=FALSE,out.width="40%",fig.align = 'center',fig.cap="Inverse function"}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/inverse_graph.png")
+```
+
 ## More on Solving Equations
+
+In this section, we will consider fractional equations and radical equations. In solving equations, if there is a one-sided implication $\implies$ in any one of the step, we have to check solution.
+
+**Example** For the following equations, find their solution sets, respectively.
+
+1. $\frac{x}{x-1}+\frac{2}{x}=\frac{1}{x^2-x}$
+
+2. $\sqrt{x}-\sqrt{x-3}=3$
+
+**Remark**
+
+1. $a=b\implies ac=bc$, but the converse is true only if $c\neq 0$.
+
+2. $a=b \implies a^2=b^2$, but the converse is true only if $a$ and $b$ have the same sign.
 
 
 
