--- a/1-3-solutions.Rmd
+++ b/1-3-solutions.Rmd
@@ -1131,3 +1131,214 @@ p(1)=4>0$$
 
 As p(x) is continuous, p(x)=0 has a solution between 1 and 1.5.Thus the solution is closer to 1.
 
+# Chapter 4 {- #ch4}
+
+## Exercise 7.1 {- #q7.1}
+
+### Q1 {- #q7.1.1}
+
+(a)$$ 270^{\circ}\times\frac{\pi}{180}=\frac{3\pi}{2} $$
+
+(b)$$ 210^{\circ}\times\frac{\pi}{180}=\frac{7\pi}{6} $$
+
+(c)$$ 315^{\circ}\times\frac{\pi}{180}=\frac{7\pi}{4} $$
+
+(d)$$ 750^{\circ}\times\frac{\pi}{180}=\frac{25\pi}{6} $$
+
+
+### Q2 {- #q7.1.2}
+
+(a)$$ \frac{\pi}{6} \div \frac{\pi}{180}=30^{\circ} $$
+
+(b)$$ \frac{3\pi}{4} \div \frac{\pi}{180}=135^{\circ} $$
+
+(c)$$ \frac{5\pi}{2} \div \frac{\pi}{180}=450^{\circ} $$
+
+(d)$$ 7\pi \div \frac{\pi}{180}=1260^{\circ} $$
+
+## Exercise 7.2 {- #q7.2}
+
+### Q1 {- #q7.2.1}
+
+(a)$$ sin{\frac{2\pi}{3}}=sin({\pi-\frac{\pi}{3}})\\
+                         =sin{\frac{\pi}{3}}\\
+                         =\frac{\sqrt{3}}{2}$$
+(b)$$ cos{\frac{2\pi}{3}}=cos({\pi-\frac{\pi}{3}})\\
+                         =-cos{\frac{\pi}{3}}\\
+                         =-\frac{1}{2}$$
+(c)$$ tan{\frac{2\pi}{3}}=tan({-\frac{\pi}{3}+\pi})\\
+                         =tan({-\frac{\pi}{3}})\\
+                         =-tan{\frac{\pi}{3}}\\
+                         =-\sqrt{3}$$
+(d)$$ sin{\frac{5\pi}{4}}=sin({\pi+\frac{\pi}{4}})\\
+                         =-sin{\frac{\pi}{4}}\\
+                         =-\frac{1}{\sqrt{2}}$$
+(e)$$ cos{\frac{5\pi}{4}}=cos({\pi+\frac{\pi}{4}})\\
+                         =-cos{\frac{\pi}{4}}\\
+                         =-\frac{1}{\sqrt{2}}$$
+(f)$$ tan{\frac{5\pi}{4}}=tan({\pi+\frac{\pi}{4}})\\
+                         =tan{\frac{\pi}{4}}\\
+                         =1$$
+                       
+### Q2 {- #q7.2.2}
+
+(a)$$ \lim_{x\to 0}\frac{tan{x}}{x}=\lim_{x\to 0}\frac{sin{x}}{x \ cos{x}}\\
+= \lim_{x\to 0}\frac{sin{x}}{x} \times \lim_{x\to 0}\frac{1}{cos{x}} \\
+= 1\times \frac{1}{1}\\
+= 1 $$
+(b)
+
+method 1:
+
+$$ \lim_{x\to 0}\frac{sin{2x}}{x}=2\lim_{x\to 0}\frac{sin{2x}}{2x}\\
+=2\lim_{2x\to 0}\frac{sin{2x}}{2x}\\
+=2\times 1\\=2 $$
+
+method 2:
+
+$$ sin{2x}=2sin{x}cos{x}\\
+\lim_{x\to 0}\frac{sin{2x}}{x}=\lim_{x\to 0}\frac{2sin{x}cos{x}}{x}\\
+=2\lim_{x\to 0}\frac{sin{x}}{x} \times \lim_{x\to 0}cos{x} \\
+=2\times 1 \times 1\\
+=2 $$
+
+
+## Exercise 7.3 {- #q7.3}
+
+### Q1 {- #q7.3.1}
+
+(g)$$ \frac{dy}{dx}=\frac{d}{dx}(sin{x} \times cos{x})\\
+                   =cos{x}\frac{d}{dx}sin{x}+sin{x} \frac{d}{dx}cos{x}\\ 
+                   =cos{x} \times cos{x} + sin{x} \times (-sin{x})\\
+                   =cos^2{x}-sin^2{x}\\
+                   =cos{2x}$$
+(h)$$ \frac{dy}{dx}=\frac{d}{dx}(\frac{cos{x}}{x^3+1})\\
+                   =\frac{(x^3+1)\frac{d}{dx}cos{x}-cos{x}\frac{d}{dx}(x^3+1)}{(x^3+1)^2} \\                =\frac{-(x^3+1)sin{x}-cos{x}\times 3x^2}{(x^3+1)^2} \\
+                   =\frac{-(x^3+1)sin{x}-3x^2cos{x}}{(x^3+1)^2} \\$$
+(i)$$ \frac{dy}{dx}=\frac{d}{dx}(x+cos{x})^2\\
+                   =2(x+cos{x}) \times (1-sin{x}) $$
+(j)$$ \frac{dy}{dx}=\frac{d}{dx}(sin{x}+cos{x})^2\\
+                   =2(sin{x}+cos{x}) \times (cos{x}-sin{x})\\
+                   =2(cos^2{x}-sin^2{x})\\
+                   =2cos{2x} $$
+
+### Q2 {- #q7.3.2}
+
+(a)
+
+$$ for\ n=2,y=sin^2{x}\\
+\frac{dy}{dx}=\frac{d}{dx}sin^2{x}\\
+                   =2sin{x}\times \frac{d}{dx}sin{x}\\
+                   =2sin{x}\ cos{x}\\$$
+                   
+$$for\ n=3,y=sin^3{x}\\
+\frac{dy}{dx}=\frac{d}{dx}sin^3{x}\\
+                   =3sin^2{x}\times \frac{d}{dx}sin{x}\\
+                   =3sin^2{x}\ cos{x}\\$$
+                   
+$$for\ n=4,y=sin^4{x}\\
+\frac{dy}{dx}=\frac{d}{dx}sin^4{x}\\
+                   =4sin^3{x}\times \frac{d}{dx}sin{x}\\
+                   =4sin^3{x}\ cos{x}\\$$
+
+(b)$$ \frac{dy}{dx}=\frac{d}{dx}sin{x}\\
+                   =nsin^{n-1}{x}\times \frac{d}{dx}sin{x}\\
+                   =nsin^{n-1}{x}\ cos{x}\\ $$
+
+### Q3 {- #q7.3.3}
+
+(a)
+
+method 1:Derivation of compound function
+
+$$ \frac{dy}{dx}=\frac{d}{dx}sin{2x}\\
+                   =cos{2x}\times \frac{d}{dx}2x\\
+                   =2cos{2x}\\ $$
+$$ \frac{dz}{dx}=\frac{d}{dx}cos{2x}\\
+                   =-sin{2x}\times \frac{d}{dx}2x\\
+                   =-2sin{2x}\\ $$
+                   
+method 2:use compound angle formulas(just give an example)
+
+$$ sin{2x}=2sin{x}cos{x}\\
+\frac{dy}{dx}=\frac{d}{dx}sin{2x}\\
+                   =\frac{d}{dx}(2sin{x} \ cos{x})\\
+                   =2(cos{x}\frac{d}{dx}sin{x}+sin{x} \frac{d}{dx}cos{x})\\
+                   =2cos{x}cos{x}-2sin{x}sin{x}\\
+                   =2(cos^2{x}-sin^2{x})\\
+                   =2cos{2x}$$
+
+
+(b)
+
+method 1:Derivation of compound function
+
+$$ \frac{dy}{dx}=\frac{d}{dx}sin{3x}\\
+                   =cos{3x}\times \frac{d}{dx}3x\\
+                   =3cos{3x}\\ $$
+$$ \frac{dz}{dx}=\frac{d}{dx}cos{3x}\\
+                   =-sin{3x}\times \frac{d}{dx}3x\\
+                   =-3sin{3x}\\ $$
+
+                   
+method 2:use compound angle formulas(just give an example)
+
+$$sin{3x}=sin{2x+x}=sin{2x}\ cos{x}+cos{2x}sin{x}\\
+\frac{dy}{dx}=\frac{d}{dx}sin{3x}\\
+             \frac{d}{dx}(sin{2x}\ cos{x}+cos{2x}sin{x})\\
+             =(cos{x}\frac{d}{dx}sin{2x}+sin{2x} \frac{d}{dx}cos{x})+(sin{x}\frac{d}{dx}cos{2x}+cos{2x} \frac{d}{dx}sin{x}) \\
+                   =cos{x}\times 2cos{2x}-sin{2x}\times sin{x}-2sin{x}\times sin{2x}+cos{2x} \times cos{x} \\
+                   =3cos{2x}\times cos{x}-3sin{2x} \times sin{x} \\ 
+                   =3cos({2x+x})\\
+                   =3cos{3x} $$
+
+(c)$$ \frac{dy}{dx}=\frac{d}{dx}sin{nx}\\
+                   =cos{nx}\times \frac{d}{dx}nx\\
+                   =ncos{nx}\\ $$
+$$ \frac{dz}{dx}=\frac{d}{dx}cos{nx}\\
+                   =-sin{nx}\times \frac{d}{dx}nx\\
+                   =-nsin{nx}\\ $$
+
+### Q4 {- #q7.3.4}
+
+(a)$$ f'(x)=\lim_{h\to 0}\frac{f(x+h)-f(x)}{h} \\
+           =\lim_{h\to 0}\frac{sin[{a(x+h)+b}]-sin({ax+b})}{h} \\
+           =\lim_{h\to 0}\frac{sin({ax+b+ah})-sin({ax+b})}{h} \\
+           =\lim_{h\to 0}\frac{sin({ax+b})cos{ah}+cos({ax+b})sin{ah}-sin({ax+b})}{h} \\
+           =\lim_{h\to 0}\frac{sin({ax+b})(cos{ah}-1)+cos({ax+b})sin{ah}}{h} \\
+           =a\lim_{ah\to 0}\frac{sin({ax+b})(cos{ah}-1)+cos({ax+b})sin{ah}}{ah} \\
+           =a[sin({ax+b})\times 0+cos({ax+b})\times 1] \\
+           =acos({ax+b})$$
+
+$$ g'(x)=\lim_{h\to 0}\frac{g(x+h)-g(x)}{h} \\
+           =\lim_{h\to 0}\frac{cos[{a(x+h)+b}]-cos({ax+b})}{h} \\
+           =\lim_{h\to 0}\frac{cos({ax+b+ah})-cos({ax+b})}{h} \\
+           =\lim_{h\to 0}\frac{cos({ax+b})cos{ah}-sin({ax+b})sin{ah}-cos({ax+b})}{h} \\
+           =\lim_{h\to 0}\frac{cos({ax+b})(cos{ah}-1)-sin({ax+b})sin{ah}}{h} \\
+           =a\lim_{ah\to 0}\frac{cos({ax+b})(cos{ah}-1)-sin({ax+b})sin{ah}}{ah} \\
+           =a[cos({ax+b})\times 0-sin({ax+b})\times 1] \\
+           =-asin({ax+b})$$
+
+(b)$$ f''(x)= [acos({ax+b})]'\\
+            = a[g(x)]'\\
+            = a \times (-asin({ax+b})) \\
+            = -a^2 sin({ax+b})$$
+$$ g''(x)= [-asin({ax+b})]'\\
+            = -a[f(x)]'\\
+            = -a \times (acos({ax+b})) \\
+            = -a^2 cos({ax+b})$$
+
+(c)
+$$ f^{(n)}(x)=\left\{
+\begin{aligned}
+(-1)^{\frac{n-1}{2}}a^ncos({ax+b}), n~is~odd \\
+(-1)^{\frac{n}{2}}a^nsin({ax+b}), n~is~even 
+\end{aligned}
+\right.  $$
+
+$$ g^{(n)}(x)=\left\{
+\begin{aligned}
+(-1)^{\frac{n+1}{2}}a^nsin({ax+b}), n~ is~ odd \\
+(-1)^{\frac{n}{2}}a^ncos({ax+b}), n~ is~ even
+\end{aligned}
+\right.  $$
